<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessbility_suggestion_dropdown_closed">No suggestions available</string>
    <string name="accessbility_suggestion_dropdown_opened">Contact suggestions opened</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_archive">Archive</string>
    <string name="action_block">Block</string>
    <string name="action_call">Make a call</string>
    <string name="action_close">Close</string>
    <string name="action_confirm_multiselect">Confirm selection</string>
    <string name="action_confirm_selection">Confirm selection</string>
    <string name="action_debug_options">Debug</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_message">Delete</string>
    <string name="action_download">Download</string>
    <string name="action_label">Return</string>
    <string name="action_menu_show_archived">Archived</string>
    <string name="action_multiselect">Select multiple images</string>
    <string name="action_people_and_options">People &amp; options</string>
    <string name="action_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="activity_not_found_message">Could not find an appropriate application</string>
    <string name="add_contact_confirmation">Add Contact</string>
    <string name="add_contact_confirmation_dialog_title">Add to Contacts?</string>
    <string name="add_more_participants_button_content_description">Add more participants</string>
    <string name="advanced_category_pref_key">advanced_category</string>
    <string name="advanced_category_pref_title">Advanced</string>
    <string name="advanced_pref_key">advanced_prefs</string>
    <string name="advanced_settings">Advanced</string>
    <string name="advanced_settings_activity_title">Advanced settings</string>
    <string name="apn_apn">APN</string>
    <string name="apn_edit">Edit access point</string>
    <string name="apn_list_pref_key">buglesub_apn_list</string>
    <string name="apn_mcc">MCC</string>
    <string name="apn_mms_port">MMS port</string>
    <string name="apn_mms_proxy">MMS proxy</string>
    <string name="apn_mmsc">MMSC</string>
    <string name="apn_mnc">MNC</string>
    <string name="apn_name">Name</string>
    <string name="apn_not_set">Not set</string>
    <string name="apn_settings">APNs</string>
    <string name="apn_settings_not_available">Access Point Name settings are not available for this user</string>
    <string name="apn_type">APN type</string>
    <string name="app_name">Messaging</string>
    <string name="archived_activity_title">Archived</string>
    <string name="archived_conversation_list_empty_text">Archived conversations appear here</string>
    <string name="archived_toast_message">%d archived</string>
    <string name="attachMediaButtonContentDescription">Add an attachment</string>
    <string name="attachment_chooser_activity_title">Select attachments</string>
    <string name="attachment_chooser_selection">%d selected</string>
    <string name="attachment_file_description">Saved MMS attachment</string>
    <string name="attachment_limit_reached_dialog_message_when_composing">Please remove one or more attachments and try again.</string>
    <string name="attachment_limit_reached_dialog_message_when_sending">You can try sending your message, but it might not be delivered unless you remove one or more attachments.</string>
    <string name="attachment_limit_reached_send_anyway">Send anyway</string>
    <string name="attachment_load_failed_dialog_message">Messaging failed to load attachment.</string>
    <string name="attachment_more_items">+%d</string>
    <string name="audio_attachment_content_description">Audio attachment</string>
    <string name="audio_pause_content_description">Pause</string>
    <string name="audio_picker_hint_text">Tap &amp; hold</string>
    <string name="audio_play_content_description">Play audio attachment</string>
    <string name="audio_record_view_content_description">Tap &amp; hold to record audio</string>
    <string name="audio_recording_error">Couldn\'t save audio. Try again.</string>
    <string name="audio_recording_replay_failed">Can\'t play audio. Try again.</string>
    <string name="audio_recording_start_failed">Can\'t record audio. Try again.</string>
    <string name="auto_delete_oldest_messages">Auto-delete messages older than %s</string>
    <string name="auto_delete_oldest_messages_confirmation">Delete messages older than %s and turn on auto-delete?</string>
    <string name="auto_retrieve_mms_pref_key">buglesub_auto_retrieve_mms</string>
    <string name="auto_retrieve_mms_pref_summary">Automatically retrieve MMS messages</string>
    <string name="auto_retrieve_mms_pref_title">Auto-retrieve</string>
    <string name="auto_retrieve_mms_when_roaming_pref_key">buglesub_auto_retrieve_mms_when_roaming</string>
    <string name="auto_retrieve_mms_when_roaming_pref_summary">Automatically retrieve MMS when roaming</string>
    <string name="auto_retrieve_mms_when_roaming_pref_title">Roaming auto-retrieve</string>
    <string name="back">Back</string>
    <string name="block_confirmation_message">You\'ll continue to receive messages from this number but won\'t be notified anymore. This conversation will be archived.</string>
    <string name="block_confirmation_title">Block %s?</string>
    <string name="block_contact_title">Block %s</string>
    <string name="blocked_contacts_title">Blocked contacts</string>
    <string name="blocked_pref_title">Blocked</string>
    <string name="blocked_toast_message">Contact blocked &amp; archived</string>
    <string name="camera_cancel_recording">Stop recording video</string>
    <string name="camera_error_failure_taking_picture">Can\'t take picture</string>
    <string name="camera_error_opening">Camera not available</string>
    <string name="camera_error_storage_fail">Can\'t save media</string>
    <string name="camera_error_unknown">Camera not available</string>
    <string name="camera_error_video_init_fail">Video capture not available</string>
    <string name="camera_media_failure">Couldn\'t load camera image</string>
    <string name="camera_start_recording">Start recording video</string>
    <string name="camera_stop_recording">Stop recording and attach video</string>
    <string name="camera_switch_camera_facing">Switch between front and back camera</string>
    <string name="camera_switch_full_screen">Switch to full screen camera</string>
    <string name="camera_switch_to_still_mode">Capture a still image</string>
    <string name="camera_switch_to_video_mode">Capture video</string>
    <string name="camera_take_picture">Take picture</string>
    <string name="cant_send_message_while_loading_attachments">Can\'t send message while loading attachments.</string>
    <string name="cant_send_message_without_active_subscription">Network is not ready. Try again.</string>
    <string name="carrier_send_error">Can\'t send message with %1$s, error %2$d</string>
    <string name="carrier_send_error_unknown_carrier">Can\'t send message with unknown carrier, error %1$d</string>
    <string name="chips_action_cancel">Cancel</string>
    <string name="chips_action_copy">Copy</string>
    <string name="chips_delete_content_description">Remove recipient</string>
    <string name="chips_permission_text">Allow contacts suggestions</string>
    <string name="chips_text_delete_button_content_description">Delete text</string>
    <string name="class_0_message_activity">Class 0 message</string>
    <string name="color_picker_default_title">Select a Color</string>
    <string name="color_swatch_description">Color %1$d</string>
    <string name="color_swatch_description_selected">Color %1$d selected</string>
    <string name="compose_message_view_hint_text">Send message</string>
    <string name="compose_message_view_hint_text_multi_sim">Send message&lt;br/&gt;&lt;small&gt;from %s&lt;/small&gt;</string>
    <string name="compose_message_view_subject_hint_text">Subject</string>
    <string name="confrim_participants_button_content_description">Confirm participants</string>
    <string name="contact_list_empty_text">Enter a contact name or phone number to start a new message</string>
    <string name="contact_list_send_to_text">Send to %s</string>
    <string name="contact_picker_all_contacts_tab_title">All contacts</string>
    <string name="contact_picker_frequents_tab_title">Frequents</string>
    <string name="contact_picker_hint_text">Click to open contacts list on this device</string>
    <string name="content_description_for_number_eight">Eight</string>
    <string name="content_description_for_number_five">Five</string>
    <string name="content_description_for_number_four">Four</string>
    <string name="delete_subject_content_description">Delete subject</string>
    <string name="enable_permission_procedure">You can change permissions in Settings &gt; Apps &gt; Messaging &gt; Permissions.</string>
    <string name="enable_permission_procedure_description">You can change permissions in Settings, Apps, Messaging, Permissions.</string>
    <string name="exit">Exit</string>
    <string name="message_context_menu_copy_text">Copy text</string>
    <string name="message_context_menu_forward_message">Forward</string>
    <string name="message_context_menu_view_details">View details</string>
    <string name="mms_text">MMS</string>
    <string name="next">Next</string>
    <string name="next_with_arrow">Next &gt;</string>
    <string name="numeric_text_keyboard_toggle_button_content_description">Switch between entering text and numbers</string>
    <string name="required_permissions_promo">Messaging needs permission to SMS, Phone and Contacts.</string>
    <string name="save">Save</string>
    <string name="sendButtonContentDescription">Send Message</string>
    <string name="settings">Settings</string>
    <string name="settings_with_arrow">Settings &gt;</string>
    <string name="start_new_conversation">Start new conversation</string>
</resources>