<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_share" android:id="@+id/share_message_menu" android:title="@string/action_share" app:showAsAction="never|always|collapseActionView"/>
    <item android:icon="@drawable/ic_forward" android:id="@+id/forward_message_menu" android:title="@string/message_context_menu_forward_message" app:showAsAction="never|always|collapseActionView"/>
    <item android:icon="@drawable/ic_save" android:id="@+id/save_attachment" android:title="@string/save" app:showAsAction="never|always|collapseActionView"/>
    <item android:icon="@drawable/ic_content_copy" android:id="@+id/copy_text" android:title="@string/message_context_menu_copy_text" app:showAsAction="never|always|collapseActionView"/>
    <item android:icon="@drawable/ic_info" android:id="@+id/details_menu" android:title="@string/message_context_menu_view_details" app:showAsAction="never|always|collapseActionView"/>
    <item android:icon="@drawable/ic_send" android:id="@+id/action_send" android:title="@string/action_send" app:showAsAction="never|always|collapseActionView"/>
    <item android:icon="@drawable/ic_file_download" android:id="@+id/action_download" android:title="@string/action_download" app:showAsAction="never|always|collapseActionView"/>
    <item android:icon="@drawable/ic_delete_small" android:id="@+id/action_delete_message" android:title="@string/action_delete_message" app:showAsAction="never|always|collapseActionView"/>
</menu>
