<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_phone_small_light" android:id="@+id/action_call" android:orderInCategory="80" android:title="@string/action_call" app:showAsAction="ifRoom"/>
    <item android:icon="@drawable/ic_person_add_light" android:id="@+id/action_add_contact" android:orderInCategory="90" android:title="@string/action_add_contact" android:showAsAction="never"/>
    <item android:id="@+id/action_people_and_options" android:orderInCategory="100" android:title="@string/action_people_and_options" app:showAsAction="never"/>
    <item android:id="@+id/action_archive" android:orderInCategory="120" android:title="@string/action_archive" android:showAsAction="never"/>
    <item android:id="@+id/action_unarchive" android:orderInCategory="130" android:title="@string/action_unarchive" android:showAsAction="never"/>
    <item android:id="@+id/action_delete" android:orderInCategory="140" android:title="@string/action_delete" android:showAsAction="never"/>
</menu>
