<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_add_white" android:id="@+id/action_start_new_conversation" android:visible="false" android:title="@string/start_new_conversation" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_show_archived" android:orderInCategory="200" android:title="@string/action_menu_show_archived" android:showAsAction="never"/>
    <item android:id="@+id/action_show_blocked_contacts" android:orderInCategory="300" android:title="@string/blocked_contacts_title" app:showAsAction="never"/>
    <item android:id="@+id/action_settings" android:orderInCategory="400" android:title="@string/action_settings" app:showAsAction="never"/>
    <item android:id="@+id/action_debug_options" android:orderInCategory="9900" android:title="@string/action_debug_options" app:showAsAction="never"/>
</menu>
