<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_cancel_small_light" android:id="@+id/action_delete_text" android:orderInCategory="0" android:title="@string/chips_text_delete_button_content_description" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_numeric_dialpad" android:id="@+id/action_ime_dialpad_toggle" android:orderInCategory="100" android:title="@string/numeric_text_keyboard_toggle_button_content_description" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_people_add_light" android:id="@+id/action_add_more_participants" android:orderInCategory="110" android:title="@string/add_more_participants_button_content_description" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_checkmark_small_light" android:id="@+id/action_confirm_participants" android:orderInCategory="120" android:title="@string/confrim_participants_button_content_description" app:showAsAction="always"/>
</menu>
