<?xml version="1.0" encoding="utf-8"?>
<com.android.messaging.p041ui.mediapicker.CameraMediaChooserView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@android:color/black" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:id="@+id/mediapicker_enabled" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.android.messaging.p041ui.mediapicker.HardwareCameraPreview android:layout_gravity="center" android:id="@+id/camera_preview" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <com.android.messaging.p041ui.mediapicker.camerafocus.RenderOverlay android:id="@+id/focus_visual" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <View android:id="@+id/camera_shutter_visual" android:background="@android:color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <FrameLayout android:layout_gravity="bottom" android:id="@+id/camera_button_container" android:background="@android:color/transparent" android:paddingTop="20dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <FrameLayout android:layout_gravity="left|center_vertical|center_horizontal|center|start" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/CameraChooserFrameStyle">
                <ImageButton android:id="@+id/camera_swap_mode_button" android:background="@drawable/transparent_button_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_mp_video_small_light" android:minWidth="48dp" android:minHeight="48dp" android:contentDescription="@string/camera_switch_to_video_mode"/>
                <Chronometer android:textSize="18sp" android:textColor="@android:color/white" android:id="@+id/camera_video_counter" android:padding="16dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </FrameLayout>
            <ImageButton android:layout_gravity="center" android:id="@+id/camera_capture_button" android:background="@drawable/transparent_button_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_checkmark_large_light" android:minWidth="96dp" android:minHeight="96dp" android:contentDescription="@string/camera_take_picture"/>
            <FrameLayout android:layout_gravity="right|center_vertical|center_horizontal|center|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingEnd="16dp">
                <ImageButton android:id="@+id/camera_fullScreen_button" android:background="@drawable/transparent_button_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_mp_full_screen_light" android:minWidth="48dp" android:minHeight="48dp" android:contentDescription="@string/camera_switch_full_screen"/>
                <ImageButton android:id="@+id/camera_swapCamera_button" android:background="@drawable/transparent_button_background" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="48dp" android:minHeight="48dp" android:contentDescription="@string/camera_switch_camera_facing"/>
                <ImageButton android:id="@+id/camera_cancel_button" android:background="@drawable/transparent_button_background" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_remove_small_light" android:minWidth="48dp" android:minHeight="48dp" android:contentDescription="@string/camera_cancel_recording"/>
            </FrameLayout>
        </FrameLayout>
    </FrameLayout>
    <TextView android:gravity="center" android:id="@+id/missing_permission_view" android:background="@color/contextual_action_bar_background_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/enable_permission_procedure" android:contentDescription="@string/enable_permission_procedure_description"/>
</com.android.messaging.p041ui.mediapicker.CameraMediaChooserView>
