<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent" android:importantForAccessibility="no">
    <FrameLayout android:id="@+id/mediapicker_enabled" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:layout_gravity="top|center_vertical|center_horizontal|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/contact_picker_hint_text" android:importantForAccessibility="no" style="@style/ContactPickerHintText"/>
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_person_light_large" android:scaleType="center" android:tint="@color/primary_color" android:contentDescription="@null" android:importantForAccessibility="no"/>
    </FrameLayout>
    <TextView android:gravity="center" android:id="@+id/missing_permission_view" android:background="@android:color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/enable_permission_procedure" android:contentDescription="@string/enable_permission_procedure_description"/>
</FrameLayout>
