<?xml version="1.0" encoding="utf-8"?>
<com.android.messaging.p041ui.mediapicker.AudioRecordView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/contextual_action_bar_background_color" android:layout_width="match_parent" android:layout_height="match_parent" android:importantForAccessibility="no">
    <FrameLayout android:id="@+id/mediapicker_enabled" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:layout_gravity="top|center_vertical|center_horizontal|center" android:id="@+id/hint_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/audio_picker_hint_text" android:importantForAccessibility="no" style="@style/AudioPickerHintText"/>
        <com.android.messaging.p041ui.mediapicker.PausableChronometer android:layout_gravity="top|center_vertical|center_horizontal|center" android:id="@+id/timer_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" style="@style/AudioPickerTimerText"/>
        <com.android.messaging.p041ui.mediapicker.SoundLevels android:layout_gravity="center" android:id="@+id/sound_levels" android:focusableInTouchMode="false" android:layout_width="260dp" android:layout_height="260dp" app:maxLevelRadius="130dp" app:minLevelRadius="55dp" app:primaryColor="@color/audio_picker_level_primary_color"/>
        <FrameLayout android:layout_gravity="center" android:id="@+id/record_button" android:padding="30dp" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/audio_record_view_content_description">
            <ImageView android:layout_gravity="center" android:id="@+id/record_button_visual" android:background="@drawable/audio_record_control_button_background" android:layout_width="70dp" android:layout_height="70dp" android:layout_margin="30dp" android:src="@drawable/ic_mp_audio_mic" android:scaleType="center" android:contentDescription="@null" android:importantForAccessibility="no"/>
        </FrameLayout>
    </FrameLayout>
    <TextView android:gravity="center" android:id="@+id/missing_permission_view" android:background="@color/contextual_action_bar_background_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/enable_permission_procedure" android:contentDescription="@string/enable_permission_procedure_description"/>
</com.android.messaging.p041ui.mediapicker.AudioRecordView>
