<?xml version="1.0" encoding="utf-8"?>
<com.android.messaging.p041ui.conversation.ComposeMessageView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:id="@+id/message_compose_view_container" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
        <View android:id="@+id/top_margin" android:layout_width="match_parent" android:layout_height="16dp"/>
        <include android:id="@+id/attachment_draft_view" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginBottom="4dp" android:layout_weight="1" layout="@layout/attachment_preview" style="@style/ComposeMessageViewDraftViewStyle"/>
        <RelativeLayout android:orientation="horizontal" android:id="@+id/subject_view" android:paddingTop="@dimen/compose_message_subject_top_padding" android:paddingBottom="@dimen/compose_message_subject_bottom_padding" android:visibility="gone" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/SubjectViewStyle">
            <com.android.messaging.p041ui.PlainTextEditText android:id="@+id/compose_subject_text" android:background="@drawable/subject_editor_bubble" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/compose_message_view_subject_hint_text" android:imeOptions="flagNoExtractUi" style="@style/ConversationComposeSubjectText"/>
            <ImageButton android:id="@+id/delete_subject_button" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_remove_light" android:contentDescription="@string/delete_subject_content_description" android:translationY="@dimen/compose_message_subject_cancel_top_offset" style="@style/AttachmentPreviewCloseButtonStyle"/>
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:paddingRight="16px" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <ImageButton android:layout_gravity="center_vertical" android:id="@+id/attach_media_button" android:paddingTop="@dimen/compose_message_attachment_padding_topBottom" android:paddingBottom="@dimen/compose_message_attachment_padding_topBottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_attachment_dark" android:contentDescription="@string/attachMediaButtonContentDescription" style="@style/ComposeMessageViewAttachMediaButtonStyle"/>
                    <com.android.messaging.p041ui.PlainTextEditText android:textColorHint="@color/conversation_list_item_read" android:layout_gravity="center" android:id="@+id/compose_message_text" android:background="@drawable/msg_bubble_input_new" android:layout_width="0dp" android:layout_height="wrap_content" android:hint="@string/compose_message_view_hint_text" android:layout_weight="1" android:imeOptions="actionUnspecified|actionSend|flagNoExtractUi|flagNoEnterAction" style="@style/ConversationComposeSendText"/>
                </LinearLayout>
                <TextView android:id="@+id/message_body_size" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:singleLine="true" style="@style/ComposeMessageViewMessageBodySizeStyle"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <FrameLayout android:layout_gravity="top" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/ComposeMessageViewFrameLayoutStyle">
                    <com.android.messaging.p041ui.conversation.SimIconView android:id="@+id/self_send_icon" android:clickable="true" android:layout_width="@dimen/conversation_message_contact_icon_size" android:layout_height="@dimen/conversation_message_contact_icon_size" android:importantForAccessibility="no" app:iconSize="0" app:reveal="true"/>
                    <ImageButton android:id="@+id/send_message_button" android:background="@drawable/send_arrow_background" android:visibility="gone" android:layout_width="@dimen/conversation_message_contact_icon_size" android:layout_height="@dimen/conversation_message_contact_icon_size" android:src="@drawable/ic_send_light" android:contentDescription="@string/sendButtonContentDescription"/>
                </FrameLayout>
                <TextView android:id="@+id/mms_indicator" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mms_text" android:maxLines="1" android:singleLine="true" style="@style/MmsIndicatorStyle"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout android:id="@+id/mediapicker_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0"/>
</com.android.messaging.p041ui.conversation.ComposeMessageView>
